# sable

./: AIDE_AVEC_GIT.md  Aide avec Git.md  Note.txt  Options à ajouter  Options_à_ajouter.md  Oral d'anglais.md  README.md  ceukonvadiralaural
pink/: CFITSIOConfig.cmake  CMakeCache.txt  CMakeLists.txt  CeCill_header.txt  DONE  FAQ  Jamroot  NSIS.template.in  TODO  UJ_CheckIncludeFile.cmake  UJ_CheckIncludeFileCXX.cmake  UJ_GenerateRPM.cmake  boost-build.jam  cygwin.make  dependencies  general.make  li.make  li32.make  li64.make  makecyg  makefile  makelin32  makelin64  makemgw.bat  mgw.make  pink.dox  pink.spec  python_documenter.py  readme  setup.py  start.bash  start.csh  user-config.jam
pink/Bdd/: bdd1.c  bdd2.c  bddsurfend.c  bddsurfend.h  bddsurfsing.c  bddtest.c  makefile  mk1  mk2  mk3  mk4  point2plus.l
pink/data/configs/: pink_build_windows_python22.bat  pink_build_windows_python26.bat  pink_build_windows_python27.bat  pink_build_windows_python32.bat  pink_windows_config.txt  pink_windows_config_python26_64.txt  pink_windows_config_python27_64.txt  pink_windows_config_python32_64.txt
pink/doc/: CMakeLists.txt  formats.txt  header.html  listcom  pink.dox  skelcurv.fig  structur.txt  tutorial.html  tutorial.tex  vtk.help  vtk64.help  xvimage1.eps  xvimage1.fig
pink/doc/latex/: files.tex  index.tex  modules.tex  refman.tex
pink/images/1d/: testlongestplateau1.list  testlongestplateau2.list
pink/images/2d/: alignement.list  alignement.spline  bean.pgm  carre2x2.pgm  carre8x8.pgm  cexgilles.pgm  chapeaumex.pgm  contour1.pgm  contour2.pgm  crois4.pgm  crois8.pgm  ctrexinondation.pgm  curve1.cur  curve1.list  curve1.pgm  curve1.spl  damier1.pgm  em.pgm  eutel.pgm  fish.pgm  fourpoints.list  fourpoints.spline  gel.grimaud.txt  graydisk.pgm  imbriqpseudo.pgm  impulse.pgm  lunettes.pgm  lunettesbig.pgm  marq.pgm  marq2.pgm  null.pgm  out.pgm  point15.pgm  point5.pgm  rampe.pgm  ruban2.pgm  ruban5.pgm  serpent.pgm  skiz1.pgm  skiz2.pgm  (+68 more)
pink/images/2dk/: testk1.graph  testk1.graph.eps  testk1.k  testk1.res  testk1_d.k  testk1_m.k  testk2.graph  testk2.graph.eps  testk2.k  testk2.pgm  testk2_d.k  testk2_m.k
pink/images/3d/: alignement.list  alignement.spline  anneau1.pgm  anneau2.pgm  anneau3.pgm  anneau4.pgm  bing26.pgm  bing6.pgm  chaine.pgm  chaine.vtk  chainebouchee.pgm  cube11.pgm  cube5x5x5.pgm  fourpoints.list  fourpoints.spline  gris0.pgm  gris1.pgm  gris2.pgm  gris3.pgm  gris4.pgm  gris5.pgm  gris6.pgm  knot6.pgm  pave5x4x4.pgm  skpartest1.k  skpartest1.pgm  test0.pgm  test1.pgm  test2.pgm  test3.k  test3.pgm  test3dmakepolygons.k  test4.pgm  test6.pgm  test7.list  test7.pgm  test8.pgm  testnbtopo1.pgm  testtrou1.pgm  testtrou2.pgm  (+6 more)
pink/images/graphes/: acyclic1.graph  test01.graph
pink/include/: DirectionalSkeletonizer.hpp  FIFO.hpp  avsimage.h  d1  d2  fseries.hpp  fseries3d.h  l2dcollapse.h  l2dkhalimsky.h  l3dcollapse.h  l3dkhalimsky.h  lattribheight.h  lattribute.h  lbspline.hpp  lcrop.h  lcurves.h  ldilateros.h  ldilateros3d.h  ldist.h  ldraw.h  ldror.hxx  ldror_char.hxx  leden.h  lfclose3d.h  lferode3d.h  lfft.h  lfindline.hxx  lfindline_char.hxx  lfits2pgm.h  lfmm.h  lfopen3d.h  lgeo.h  lgeodesic.h  lhisto.h  lhtkern.h  liar_fseries.h  liar_line.h  liarp.h  llabelextrema.h  lliar.hxx  (+106 more)
pink/masks/: 2d_east.pgm  2d_north.pgm  2d_south.pgm  2d_west.pgm  3d_down.pgm  3d_east.pgm  3d_north.pgm  3d_south.pgm  3d_up.pgm  3d_west.pgm  CHOY1.pgm  CHOY13.pgm  CHOY5.pgm  CHOY9.pgm  CHOYb1.pgm  CHOYb11.pgm  CHOYb2.pgm  CHOYb21.pgm  CHOYb22.pgm  CHOYb23.pgm  CHOYb24.pgm  CHOYb3.pgm  CHOYb7.pgm  CHOYb8.pgm  CHOYb9.pgm  HSCP1.pgm  HSCP13.pgm  HSCP17.pgm  HSCP18.pgm  HSCP19.pgm  HSCP20.pgm  HSCP5.pgm  HSCP9.pgm  HSCPN1.pgm  HSCPN5.pgm  JANG1.pgm  JANG13.pgm  JANG17.pgm  JANG21.pgm  JANG22.pgm  (+189 more)
pink/private/include/: mcxbib.h
pink/private/scripts/: addconstcolor  combine  combine_color  combinemask  crestrest0  crestrest1  dareaop  deconnecte  detectbifurcations2  dilattopo  elim1  elim2  erostopo  filtrecols  filtrecomp  filtreimp  filtrepics4  filtrepics6  filtrepics8  filtrepointes  filtrepointes3d  filtrepuits4  filtrepuits6  filtrepuits8  firstcomp  flowskel1  flowskel2  flowskel3  flowskel4  hautdeforme  hccut  hcut  inseregif  insertppm  lfiltrepics4  lfiltrepuits4  mkball  mkplans  moyendir  ogniewicz  (+46 more)
pink/python/: apply2d  ell_fitting  findsegments  skelfilter  testsuit.py  utilities  utilities~
pink/python/documentation/: _doc_erosball.sage  _doc_long2byte.sage  _doc_medianfilter.sage  _doc_show_image.sage  _doc_skeleton.sage  _doc_wshedtopo.sage  (+2 more)
pink/scripts/: ASF4-connex.sh  GraphASF.sh  GraphClose.sh  GraphOpen.sh  addedennoise  blacktophat  bouchecavites  bouchetrous  bouchettrous  centrecolor  closeballlab  closeballnum  closeballnumrec  closerecball  componentdelete  constrainedconnectivity.sh  cropgif  cropjpg  disturb  ebarbe  ebarbe2d  ebarbe3d  elimcadre  elimcompbord  elongatedness  gradmorph  hasf3d  hasf3d26  hcutting_new  histhmus  holeclosing_area  homotopicreconstruction  interpolate_bin  interpolate_color  interpolate_gray  invariants2d  invariants3d  lambdacurvskel  lambdaskeleton  lmaskel  (+42 more)
pink/tcl/: 2dflowskeleton.tcl  2dsegment.tcl  2dview  3dsegment.tcl  3dview  3dview.tcl  3dview.v0.tcl  3dview.v1.tcl  3dview1  3dview_tcl.c  3dviewlab1  Dialog.tcl  areaclosing.tcl  areaopen.tcl  areaopening.tcl  axone1.tcl  axone2.tcl  axones.tcl  axones_main.tcl  circlefit.tcl  closeball.tcl  closeball_tcl.c  closerecball.tcl  convertlist.tcl  curvextract.tcl  decimate.tcl  del_bronches.tcl  dilatball.tcl  dilatball_tcl.c  dir_exec  dir_reformat  dirdetect  dirthick2  dirthin  dirthin2  dubuisson  edit3d.tcl  ekta1  ekta1.bat  ekta10  (+115 more)
pink/tools/: c2html.lex  changetypes.lex  changetypes2.lex  checktypes.c  com_filenames  cpphead  filefilter1.c  filefilter2.c  filefilter3.c  filefilter4.c  filefilter5.c  filefilter7.c  import_jean.txt  lex.yy.c  lib_filenames  modfiles  modfiles1  modfiles1b  modfiles2  modfiles3  modfiles4  modfiles5  modfiles6  modfiles7  pinktypes.h  readme
pink/tutorial/: README  formation_EDF.txt  generate_package.py
(+105740 files in other folders)
